fixed box overflow in pop up

--- a/frontend/src/components/Popup/popup.css
+++ b/frontend/src/components/Popup/popup.css
@@ -13,15 +13,17 @@
 
     justify-self: center;
     align-self: center;
-
-    justify-content: space-between;
     box-shadow: 3px 3px 0px #4062BB;
 }
 
-
+.popupItems {
+    display:flex;
+    margin-bottom:auto /*push following elements to bottom*/
+}
 
 .bottom {
     display: flex;
     justify-content: space-between;
     padding: 1rem;
+    margin-top:auto /* push it and following elements to bottom */
 }
